--- a/package.json
+++ b/package.json
@@ -18,20 +18,32 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prepare": "npx husky install",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "migration:generate": "ENV_PATH='.env' npm run typeorm -- -d ./ormconfig.ts migration:generate ./migrations/$npm_config_name",
+    "db:migrate": "ENV_PATH='.env' npm run typeorm migration:run -- -d ./ormconfig.ts",
+    "db:revert": "ENV_PATH='.env' npm run typeorm -- -d ./ormconfig.ts migration:revert",
+    "db:sync": "ENV_PATH='.env' npm run typeorm -- -d ./typeOrm.config.ts schema:sync",
+    "db:log-sync": "ENV_PATH='.env' npm run typeorm -- -d ./typeOrm.config.ts schema:log"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.11",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "express-basic-auth": "^1.2.1",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
@@ -42,10 +54,12 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
