--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-validator": "^0.13.2",
     "express-basic-auth": "^1.2.1",
     "morgan": "^1.10.0",
+    "nanoid": "^3.3.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.8.0",
