--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "db:log-sync": "ENV_PATH='.env' npm run typeorm -- -d ./typeOrm.config.ts schema:log"
   },
   "dependencies": {
+    "@golevelup/nestjs-rabbitmq": "^3.3.0",
     "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.11",
@@ -36,13 +37,14 @@
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.1",
-    "nestjs-typeorm-paginate": "^4.0.2",
+    "amqplib": "^0.10.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "express-basic-auth": "^1.2.1",
     "morgan": "^1.10.0",
     "nanoid": "^3.3.4",
+    "nestjs-typeorm-paginate": "^4.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.8.0",
@@ -56,6 +58,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/amqplib": "^0.10.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
