--- a/env.example
+++ b/env.example
@@ -1,3 +1,18 @@
-PORT=3000
-SWAGGER_USERNAME=toufiq
-SWAGGER_PASSWORD=1010
+PORT=
+JWT_SECRET=
+
+DB_DRIVER=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+DB_HOST=
+DB_PORT=
+DB_MIGRATE=
+DB_LOG_ENABLED=
+
+RABBIT_MQ_URL=
+RABBIT_MQ_DEPLOY_IT_EXCHANGE=
+RABBIT_MQ_DEPLOY_IT_JOB_ROUTING_KEY=
+RABBIT_MQ_DEPLOY_IT_JOB_QUEUE=
+
+REPOSITORIES_LOCAL_DIR_PATH=
