--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prepare": "npx husky install",
-    "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "migration:generate": "ENV_PATH='.env' npm run typeorm -- -d ./dist/ormconfig.js migration:generate ./migrations/$npm_config_name",
-    "db:migrate": "ENV_PATH='.env' npm run typeorm migration:run -- -d ./dist/ormconfig.js",
-    "db:revert": "ENV_PATH='.env' npm run typeorm -- -d ./dist/ormconfig.js migration:revert",
-    "db:sync": "ENV_PATH='.env' npm run typeorm -- -d ./dist/ormconfig.js schema:sync",
-    "db:log-sync": "ENV_PATH='.env' npm run typeorm -- -d ./dist/ormconfig.js schema:log"
+    "migration:generate": "ENV_PATH='.env' typeorm -d ./dist/ormconfig.js migration:generate ./migrations/$npm_config_name",
+    "db:migrate": "ENV_PATH='.env' typeorm migration:run -d ./dist/ormconfig.js",
+    "db:revert": "ENV_PATH='.env' typeorm -d ./dist/ormconfig.js migration:revert",
+    "db:sync": "ENV_PATH='.env' typeorm -d ./dist/ormconfig.js schema:sync",
+    "db:log-sync": "ENV_PATH='.env' typeorm -d ./ormconfig.js schema:log"
   },
   "dependencies": {
     "@golevelup/nestjs-rabbitmq": "^3.3.0",
