--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
     "prepare": "npx husky install",
     "migration:generate": "ENV_PATH='.env' typeorm -d ./dist/ormconfig.js migration:generate ./migrations/$npm_config_name",
     "db:migrate": "ENV_PATH='.env' typeorm migration:run -d ./dist/ormconfig.js",
     "db:revert": "ENV_PATH='.env' typeorm -d ./dist/ormconfig.js migration:revert",
     "db:sync": "ENV_PATH='.env' typeorm -d ./dist/ormconfig.js schema:sync",
-    "db:log-sync": "ENV_PATH='.env' typeorm -d ./ormconfig.js schema:log"
+    "db:log-sync": "ENV_PATH='.env' typeorm -d ./ormconfig.js schema:log",
+    "test:e2e": "cucumber-js -p default --exit"
   },
   "dependencies": {
     "@golevelup/nestjs-rabbitmq": "^3.3.0",
@@ -54,6 +54,8 @@
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^8.10.0",
+    "@cucumber/pretty-formatter": "^1.0.0",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -67,17 +69,19 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "cucumber-html-reporter": "^5.5.0",
+    "cucumber-tsflow": "^4.0.0-rc.7",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.0.3",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
+    "supertest": "^6.3.3",
     "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.0.0",
+    "tsconfig-paths": "^4.0.0",
     "typescript": "^4.3.5"
   },
   "jest": {
