Fix: Docker Compose ports issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,4 +71,4 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
-      - $PORT:$PORT
+      - "${PORT}:${PORT}"
