--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "express-basic-auth": "^1.2.1",
+    "http-proxy": "^1.18.1",
     "morgan": "^1.10.0",
     "nanoid": "^3.3.4",
     "nestjs-typeorm-paginate": "^4.0.2",
@@ -51,7 +52,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
     "swagger-ui-express": "^4.5.0",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "vhost": "^3.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -60,11 +62,13 @@
     "@types/amqplib": "^0.10.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/http-proxy": "^1.17.9",
     "@types/jest": "27.5.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
+    "@types/vhost": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
