Add Network mode in docker compose

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -5,6 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile
     hostname: deploy-it
+    network_mode: "host"
     container_name: deploy-it
     restart: unless-stopped
     env_file:
