--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.11",
-    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/jwt": "10.0.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/swagger": "^6.0.5",
@@ -41,7 +41,7 @@
     "axios": "^1.3.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "0.14.0",
     "express-basic-auth": "^1.2.1",
     "http-proxy": "^1.18.1",
     "morgan": "^1.10.0",
